Change entrypointmodule to entrypointsqsmodule Rename Controller to CompanyController (frameworkmodule) Create input Dto for CompanyController Add PersistenceConfig to frameworkmodule that can switch between dataprovider sql and nosql modules